--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -115,8 +115,28 @@
             .search-filter-block{
                 .kr-sg-input-search{
                     width: 252px;
+                    position: relative;
                     input{
                         padding-left: 30px;
+                    }
+                    .close-icon{
+                        position: absolute;
+                        right: 11px;
+                        top: 12px;
+                        cursor: pointer;
+                    }
+                    .input-search{
+                        border: 1px solid #E4E5E7;                            
+                        border-radius: 4px;
+                        padding-left: 36px;
+                        padding-right: 15px;
+                        font-size: 14px;
+                        &:focus{
+                            border: 1px solid #1372ff;
+                        }
+                        &::placeholder{
+                            color: #BDC1C6;
+                        }
                     }
                 }
             }
