--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -20,7 +20,12 @@
             font-size: 12px;
         }  
     }
-
+    .empty-landing-screen {
+        width: 660px;
+        margin: 0 auto;
+        padding: 25px 0 40px 0 !important;
+        text-align: center;
+    }
     .noTraits {
         text-align: center;
         .noTraitsImg {
