FLY-2333 issue fixed

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
@@ -1,7 +1,9 @@
 .manage-credentials-container{
     .header-sec{        
-        padding: 15px 25px;
+        padding: 0px 25px;
+        height: 52px;
         background: #F8F9FA;
+        align-items: center;
         .title-header{            
             font-weight: 500;
             font-size: 18px;
@@ -129,14 +131,44 @@
         }
     }    
 }
-::ng-deep .view-query-modal{
-    .switch-toggle{
-        .kr-sg-toggle{
-            span{
-                width: 600px !important;
+::ng-deep .add-credentials-popup{
+    .modal-dialog{
+        background: #FFFFFF;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        width: 810px;
+        height: 523px;
+        max-height: 523px;
+        .modal-content{
+            border-radius: 8px !important;
+            .modal-header{
+                span{
+                    color: #202124;
+                    font-weight: 500;
+                    font-size: 18px;
+                    line-height: 22px;
+                }
             }
-        }       
-    }
+            .kr-sg-dropdowns {
+                .dropdown-open {
+                    .dropdown-input{
+                        border: solid 1px #EFF0F1 !important;
+                        background: #EFF0F1;
+                        &::before{
+                            opacity: 0.4;
+                        }
+                    }
+                }
+            }
+            .switch-toggle{
+                .kr-sg-toggle{
+                    span{
+                        width: 600px !important;
+                    }
+                }       
+            }
+        }
+    }    
 }
 .empty-scroll{
     height: calc(100vh - 62px);
