--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -62,20 +62,16 @@
             </div>
         </div>
     </perfect-scrollbar>   
-    <kr-modal modalType="center" #addCredential modalClass="modal_popups_ view-query-modal"> 
+
+    <kr-modal modalType="center" #addCredential modalClass="modal_popups_ add-credentials-popup"> 
         <div class="modal-header">
             <span> {{"credentials.add_credential" | translate}}</span>
             <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
-        </div>
-        <!-- <perfect-scrollbar class="perfect-scroll-modal-body"> -->
+        </div>        
         <div class="modal-body">
             <div class="kr-sg-input-text mb-4">
-                <div class="label-text">{{"credentials.credential_name" | translate}}</div>
-            
-                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')"
-                    class="input-text">
-               <img id="infoWarning1" src="assets/icons/warning_escalation.svg" style="display: none;" height="12" width="12" />
-
+                <div class="label-text">{{"credentials.credential_name" | translate}}</div>            
+                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
             </div>
             <div class="kr-sg-checkbox d-none">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
@@ -85,45 +81,46 @@
                 <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.register">
                 <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
             </div>
-            <hr class="mt-4 mb-4">
-    
-            <div class="label-text mb-2">{{"credentials.jwt_algorithm" | translate}}</div>
+
+            <hr class="mt-4 mb-4">                
+
             <div class="kr-sg-dropdowns">
-                <div class="dropdown dropdown-open" >
-                    <button class="dropdown-toggle dropdown-input"><span class="select-placeholder">
-                            {{credntial.awt}}</span> </button>
-                    <ul class="dropdown-menu content-menu">
-                        <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
-                        <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>
-                    </ul>
+                <div class="label-text mb-1">{{"credentials.jwt_algorithm" | translate}} </div>
+                <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'">                                        
+                    <div class="dropdown dropdown-open">
+                        <button class="dropdown-toggle dropdown-input" ngbDropdownToggle> {{credntial.awt}}</button>                                            
+                        <ul class="dropdown-menu content-menu faq-filter-add mw-100 w-100 p-0" ngbDropdownMenu>
+                            <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
+                            <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>            
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </div> 
+
             <div class="switch-toggle mt-4 d-none">                
                 <label class="kr-sg-toggle">
                     <input type="checkbox" [(ngModel)]="credntial.enabled">
                     <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
                 </label>
-            </div>
-    
-    
-        </div>
-        <!-- </perfect-scrollbar> -->
+            </div>        
+        </div>        
         <div class="modal-footer">
             <button class="kr-sg-button-primary btn_lg" (click)="validateSource()">{{"credentials.add" | translate}}</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">{{"credentials.cancel" | translate}}</button>
         </div>
     </kr-modal> 
-    <kr-modal modalType="center" #editCredential modalClass="modal_popups_ view-query-modal">
+
+
+
+    <kr-modal modalType="center" #editCredential modalClass="modal_popups_ add-credentials-popup">
         <div class="modal-header">
             <span> {{"credentials.edit_credential" | translate}}</span>
             <div class="close_icon" (click)="closeEditModalPopup()"><img src="assets/icons/modal-close.svg"></div>
-        </div>
-        <!-- <perfect-scrollbar class="perfect-scroll-modal-body"> -->
+        </div>        
         <div class="modal-body">
             <div class="kr-sg-input-text mb-4">
                 <div class="label-text">{{"credentials.credential_name" | translate}}</div>
-                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name"
-                    class="input-text">
+                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name" class="input-text">
             </div>
             <div class="kr-sg-checkbox d-block p-0 ">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.anonymus">
@@ -135,27 +132,25 @@
             </div>
             <hr class="mt-4 mb-4">
     
-            <div class="label-text mb-2">{{"credentials.jwt_algorithm" | translate}}</div>
             <div class="kr-sg-dropdowns">
-                <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="select-placeholder">
-                            {{editCreden.awt}}</span> </button>
-                    <ul class="dropdown-menu content-menu">
-                        <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
-                        <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>
-                    </ul>
+                <div class="label-text mb-1">{{"credentials.jwt_algorithm" | translate}} </div>
+                <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'">                                        
+                    <div class="dropdown dropdown-open">
+                        <button class="dropdown-toggle dropdown-input" ngbDropdownToggle> {{credntial.awt}}</button>                                            
+                        <ul class="dropdown-menu content-menu faq-filter-add mw-100 w-100 p-0" ngbDropdownMenu>
+                            <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
+                            <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>            
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </div> 
             <div class="switch-toggle mt-4">                
                 <label class="kr-sg-toggle">
                     <input type="checkbox" [(ngModel)]="editCreden.enabled">
                     <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
                 </label>
-            </div>
-    
-    
-        </div>
-        <!-- </perfect-scrollbar> -->
+            </div>        
+        </div>        
         <div class="modal-footer">
             <button class="kr-sg-button-primary btn_lg" (click)="saveEditCredential()" >{{"credentials.save"| translate}}</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeEditModalPopup()">{{"credentials.cancel"| translate}}</button>
