Error message is displayed,When user tries to edit the rule without condition and clicking on save button issue fixed

--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -455,7 +455,7 @@
                                     </div>
                                 </div>
                                 <div class="row m-0 response-content-sec">
-                                    <div class="col-2 p-0 title">Response</div>
+                                    <div class="col-2 p-0 title"></div>
                                     <div class="col-10 row m-0 align-items-center right-side-sec pr-0">
                                         <div class="kr-sg-dropdowns pl-0 col-4" ngbDropdown (click)="currentEditInex = index">
                                             <div class="dropdown dropdown-open">
